--- a/machine-learning/Decision-Boundary-Visualization.ipynb
+++ b/machine-learning/Decision-Boundary-Visualization.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# Imports\n"
+    "# Imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
