--- a/kaggle/Allstate Kaggle.ipynb
+++ b/kaggle/Allstate Kaggle.ipynb
@@ -8,6 +8,10 @@
    },
    "outputs": [],
    "source": [
+    "''' This was code for my best entry: Public MAE = 1161.2, Private MAE = 1173.4 \n",
+    " Top Scores: Public MAE = 1096.9, Private MAE = 1109.7 \n",
+    " Random Forest Benchmark: Public MAE = 1217.5, Private MAE = 1227.7\n",
+    " Ranking 2071 out of 3155, top 66%.''' \n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
