--- a/machine-learning/Composer-Classification/0 music21-Feature_Extraction.ipynb
+++ b/machine-learning/Composer-Classification/0 music21-Feature_Extraction.ipynb
@@ -61,17 +61,17 @@
     "# to keep track of seen songs in case a corrupt file throws an error and cell needs to be re-run.\n",
     "\n",
     "for filename in os.listdir(folder_0):\n",
-    "    if str(os.path.join(folder_0, filename)) not in seen_songs:\n",
+    "    if str(os.path.join(folder_0, filename)) not in seen_songs_0:\n",
     "        print(str(os.path.join(folder_0, filename)), k)\n",
     "        ds.addData(music21.converter.parse(str(os.path.join(folder_0, filename))), classValue=0)\n",
-    "        seen_songs.append(str(os.path.join(folder_0, filename)))\n",
+    "        seen_songs_0.append(str(os.path.join(folder_0, filename)))\n",
     "    k += 1\n",
     "\n",
     "for filename in os.listdir(folder_1):\n",
-    "    if str(os.path.join(folder_1, filename)) not in seen_songs:\n",
+    "    if str(os.path.join(folder_1, filename)) not in seen_songs_1:\n",
     "        print(str(os.path.join(folder_1, filename)), l)\n",
     "        ds.addData(music21.converter.parse(str(os.path.join(folder_1, filename))), classValue=1)\n",
-    "        seen_songs.append(str(os.path.join(folder_1, filename)))\n",
+    "        seen_songs_1.append(str(os.path.join(folder_1, filename)))\n",
     "    l += 1"
    ]
   },
