--- a/machine-learning/Composer-Classification/0 music21-Feature_Extraction.ipynb
+++ b/machine-learning/Composer-Classification/0 music21-Feature_Extraction.ipynb
@@ -63,7 +63,7 @@
     "for filename in os.listdir(folder_0):\n",
     "    if str(os.path.join(folder_0, filename)) not in seen_songs_0:\n",
     "        print(str(os.path.join(folder_0, filename)), k)\n",
-    "        ds.addData(music21.converter.parse(str(os.path.join(folder_0, filename))),\n"
+    "        ds.addData(music21.converter.parse(str(os.path.join(folder_0, filename))),\n",
     "                   classValue=0)\n",
     "        seen_songs_0.append(str(os.path.join(folder_0, filename)))\n",
     "    k += 1\n",
@@ -71,7 +71,7 @@
     "for filename in os.listdir(folder_1):\n",
     "    if str(os.path.join(folder_1, filename)) not in seen_songs_1:\n",
     "        print(str(os.path.join(folder_1, filename)), l)\n",
-    "        ds.addData(music21.converter.parse(str(os.path.join(folder_1, filename))),\n" 
+    "        ds.addData(music21.converter.parse(str(os.path.join(folder_1, filename))),\n", 
     "                   classValue=1)\n",
     "        seen_songs_1.append(str(os.path.join(folder_1, filename)))\n",
     "    l += 1"
